# Android-FTA

./: .gitignore  .pre-commit-config.yaml  LICENSE  PROJECT_HANDOVER.md  README.md  main.py  pyproject.toml  requirements.txt  run_web.py
.github/workflows/: ci.yml
android_fta/: __init__.py  __main__.py  web_server.py
android_fta/cli/: __init__.py  commands.py  parser.py
android_fta/core/: __init__.py  batch_engine.py  fta_engine.py  models.py  skill_engine.py
android_fta/providers/: __init__.py  perfetto.py
android_fta/reports/: __init__.py  base.py  csv.py  json.py  markdown.py
android_fta/static/: index.html
android_fta/static/assets/: index-9TzPWSzD.css  index-BhYIktS8.js
core/: fta_engine.py  skill_engine.py
docs/: ARCHITECTURE.md  implementation_plan.md  research_deep_dive.md  system_overview.md  task.md  walkthrough.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
knowledge/skills/: startup_analysis.json
knowledge/strategies/: root_causes.json
providers/: perfetto_provider.py
tests/: __init__.py  conftest.py  test_batch_engine.py  test_cli.py  test_fta_engine.py  test_perfetto_provider.py  test_reports.py  test_skill_engine.py
